--- a/templates/_layout/project.html.twig
+++ b/templates/_layout/project.html.twig
@@ -143,7 +143,7 @@
 							{# Project Info #}
 							<div class="col-md-8 portfolio-single-content">
 
-								<div class="fancy-title title-border">Project Info:</div>
+								<div class="description-title">Project Info:</div>
 								{% block page_content %}{% endblock %}
 
 							</div>
