--- a/templates/_sections/posttype/comments.html.twig
+++ b/templates/_sections/posttype/comments.html.twig
@@ -45,7 +45,7 @@
                 {{ form_start(commentForm) }}
                 {{ form_widget(commentForm) }}
                 {{ form_errors(commentForm) }}
-                {% include "_elements/buttons/button-lg-reveal.html.twig" with {
+                {% include "_elements/button.html.twig" with {
                     type: 'submit',
                     label: "Submit"
                 } %}
