--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -73,7 +73,7 @@
 							{{ form_start(contactForm) }}
                             {{ form_errors(contactForm) }}
                             {{ form_widget(contactForm) }}
-                            {% include "_elements/buttons/button-lg-reveal.html.twig" with {
+                            {% include "_elements/button.html.twig" with {
                                 label: 'Send',
                                 type: 'submit',
                                 icon: 'icon-email3'
