--- a/templates/_layout/post.html.twig
+++ b/templates/_layout/post.html.twig
@@ -48,6 +48,8 @@
 
                     {% if hasAfterContent %}
 
+                        <div class="divider divider-center"><i class="icon-circle"></i></div>
+
                         {% if showPostNavigation %}
                             {% include "_sections/posttype/post-navigation.html.twig" with { 
                                 prevNextLinks: prevNextLinks 
