--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -31,10 +31,10 @@
     {label: page_title, active: true}
 ] %}
 {% set page_project = project %}
-{% set showAuthor = true %}
+{% set showAuthor = false %}
 {% set showComments = true %}
 {% set showRelatedProjects = true %}
-{% set showProjectNavigation = true %}
+{% set showProjectNavigation = false %}
 {% set prevNextLinks = prevNextLinks %}
 {% set author_routeName = 'author_projects' %}
 
