--- a/templates/security/_register-form.html.twig
+++ b/templates/security/_register-form.html.twig
@@ -13,7 +13,11 @@
     <span> Mandatory fields are mrked with a *.</span>
 </p>
 
-{{ form_start(registerForm, {attr: {novalidate: ''}}) }}
+{{ form_start(registerForm, {attr: {novalidate: '', class: 'mb-0' }}) }}
 {{ form_widget(registerForm) }}
 {{ form_errors(registerForm) }}
+{% include "_elements/button.html.twig" with {
+    label: 'Register',
+    type: 'submit'
+} %}
 {{ form_end(registerForm) }}
