--- a/templates/security/_register-form.html.twig
+++ b/templates/security/_register-form.html.twig
@@ -10,7 +10,7 @@
     <span>Complete this form to submit you request to become an author on this website.</span>
     <span> Authors can write blog posts and lessons.</span>
     <span> After submitted, your request will be reviewed by the administrator.</span>
-    <span> Mandatory fields are mrked with a *.</span>
+    <span> Mandatory fields are marked with a *.</span>
 </p>
 
 {{ form_start(registerForm, {attr: {novalidate: '', class: 'mb-0' }}) }}
