--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -13,34 +13,45 @@
 {% block title %}My account{% endblock %}
 
 {% set page_title = "My account" %}
-    
-{% endblock %}
 
 {% block content %}
 
     <div class="d-flex justify-content-between align-items-center my-4">
         <div>Registered on {{ app.user.createdAt|date('F j, Y') }}</div>
-        <a href="{{ path('app_logout') }}">
-            <button type="button" class="btn btn-outline-danger">Logout</button>
-        </a>
+        {% include "_elements/button.html.twig" with {
+            label: 'Sign out',
+            icon: 'icon-line2-logout',
+            url: path('app_logout'),
+            border: true,
+            color: 'red',
+            size: 'small'
+        } %}
     </div>
 
-    <div class="alert alert-primary">
-        {% if app.user.isAuthor is same as(null) %}
-            <span>Authors can publish blog posts and lessons on this website. </span>
-            <a href="{{ path('author_register') }}">
-                <button type="submit" class="btn btn-sm btn-primary">Become an author</button>
-            </a>
-        {% else %}
-            Your request to become an author is pending. Please wait while the admin is verifying your appliance.
-        {% endif %}
-    </div>
+    {% if app.user.isAuthor is same as(null) %}
+        {% include "_elements/alert.html.twig" with {
+            flashGroup: 'info',
+            flashMessage: 
+                '<span>Authors can publish blog posts and lessons on this website. </span>' ~ 
+                '<a href="' ~ path('author_register') ~ '">' ~
+                    '<button type="submit" class="btn btn-sm btn-primary">Become an author</button>' ~
+                '</a>'
+        } %}
+    {% else %}
+        {% include "_elements/alert.html.twig" with {
+            flashGroup: 'info',
+            flashMessage: 'Your request to become an author is pending. Please wait while the admin is verifying your appliance.'
+        } %}
+    {% endif %}
 
     <h3 class="mt-5 mb-4">Edit my informations</h3>
 
     {{ form_start(userForm, {attr: {novalidate: ''}}) }}
     {{ form_widget(userForm) }}
-    <button type="submit" class="btn btn-primary">Edit</button>
+    {% include "_elements/button.html.twig" with {
+        type: 'submit',
+        label: 'Edit'
+    } %}
     {{ form_end(userForm) }}
 
 {% endblock %}
