fix slider smooth heigh

--- a/templates/_elements/project_gallery_slider.html.twig
+++ b/templates/_elements/project_gallery_slider.html.twig
@@ -8,6 +8,7 @@
     {% set autoplay = false %}
     {% set showArrows = true %}
     {% set showPagination = true %}
+    {% set smoothHeight = true %}
 
     {% set sliderShowThumbnail = false %}
     {% set autoplayDelay = 6000 %}
@@ -26,7 +27,7 @@
     {% set smoothHeight = smoothHeight is defined and smoothHeight is not same as(false) ? "true" : "false" %}
     {% set videoAttributes = videoAutoPlay is defined and videoAutoPlay is not same as(false) 
         ? 'loop autoplay muted' 
-        : 'controls' 
+        : 'autoplay controls' 
     %}
 
 {# Project Gallery Slider ======================================================== #}
