feat: contact emails

--- a/assets/sass/contact.scss
+++ b/assets/sass/contact.scss
@@ -3,3 +3,4 @@
 @import './public/pagetitle';
 @import './public/elements/feature-box'; // optimized h
 @import './public/elements/form-field';
+@import './public/elements/alerts';
