--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -67,7 +67,7 @@
                         <div class="fancy-title title-border">
                             <h3>Send me an Email</h3>
                         </div>
-
+                        {% include "_elements/alert.html.twig" %}
                         <div class="form-widget">
 
 							{{ form_start(contactForm) }}
