added date to contact email data

--- a/templates/email/contact.html.twig
+++ b/templates/email/contact.html.twig
@@ -1,4 +1,7 @@
 <p>
+	<b>Date:</b>
+	{{ contactMessage.dateTime|date("F jS \\a\\t g:ia") }}</p>
+<p>
 	<b>Fullname:</b>
 	{{ contactMessage.fullName }}</p>
 <p>
