--- a/templates/_elements/project_gallery_slider.html.twig
+++ b/templates/_elements/project_gallery_slider.html.twig
@@ -88,6 +88,8 @@
                     
                     {% endif %}
 
+                    <div class="slider-spinner"></div>
+
                 </div>
 
             {% endfor %}
