--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -50,8 +50,8 @@
 
                         <div class="col-lg-9 col-md-7 col-padding">
                             <div class="heading-block">
-                                <span class="before-heading color">CEO &amp; Co-Founder</span>
-                                <h3>John Doe</h3>
+                                <small class="text-muted text-uppercase fw-light ls4 mb-1 d-block">Full-Stack Developer</small>
+                                <h3>Edouard Proust</h3>
                             </div>
 
                             <div class="col">
@@ -149,41 +149,46 @@
                 </div>
             </div>
 
-            {# counters #}
+            {# Counters #}
             <div class="section bg-transparent footer-stick">
                 <div class="container clearfix">
 
-                    <div class="row col-mb-50">
-
-                        <div class="col-sm-6 col-lg-3 text-center" data-animate="bounceIn">
-                                <i class="i-large mx-auto icon-line2-directions"></i>
-                            <div class="counter counter-lined"><span data-from="100" data-to="846" data-refresh-interval="50" data-speed="2000"></span>K+</div>
-                            <h5>Lines of Codes</h5>
-                        </div>
-
-                        <div class="col-sm-6 col-lg-3 text-center" data-animate="bounceIn" data-delay="200">
-                            <i class="i-large mx-auto mb-0 icon-line2-graph"></i>
-                            <div class="counter counter-lined"><span data-from="3000" data-to="15360" data-refresh-interval="100" data-speed="2500"></span>+</div>
-                            <h5>KBs of HTML Files</h5>
-                        </div>
-
-                        <div class="col-sm-6 col-lg-3 text-center" data-animate="bounceIn" data-delay="400">
-                            <i class="i-large mx-auto mb-0 icon-line2-layers"></i>
-                            <div class="counter counter-lined"><span data-from="10" data-to="408" data-refresh-interval="25" data-speed="3500"></span>*</div>
-                            <h5>No. of Templates</h5>
-                        </div>
-
-                        <div class="col-sm-6 col-lg-3 text-center" data-animate="bounceIn" data-delay="600">
-                            <i class="i-large mx-auto mb-0 icon-line2-clock"></i>
-                            <div class="counter counter-lined"><span data-from="60" data-to="1200" data-refresh-interval="30" data-speed="2700"></span>+</div>
-                            <h5>Hours of Coding</h5>
-                        </div>
-
-                    </div>
+                    {% include "_sections/counters.html.twig" with { counters: [
+                        {
+                            icon: 'icon-line2-clock',
+                            title: 'hours of coding',
+                            to: stats.daysOfCoding * (5 / 7) * 5,
+                            after: '+',
+                            interval: 25,
+                            speed: 2000
+                        },{
+                            icon: 'icon-code1',
+                            title: 'Mastered languages',
+							content: 'Including ' ~ stats.languages.list ~ '.',
+                            to: stats.languages.count,
+                            interval: 100,
+                            speed: 2500,
+                            delay: 200
+                        },{
+                            icon: 'icon-line2-layers',
+                            title: 'Frameworks and bundles',
+							content: stats.technologies.list,
+                            to: stats.technologies.count,
+                            interval: 25,
+                            speed: 3500,
+                            delay: 400
+                        },{
+                            icon: 'icon-line2-graph',
+                            title: 'Projects on Github',
+                            to: stats.githubRepositories|length,
+                            interval: 30,
+                            speed: 2700,
+                            delay: 600
+                        },
+                    ] } %}
 
                 </div>
             </div>
-
 
         </div>
     </section>
