--- a/assets/sass/public/elements/sliders/_flex-slider.scss
+++ b/assets/sass/public/elements/sliders/_flex-slider.scss
@@ -1,4 +1,3 @@
-
 /* ----------------------------------------------------------------
 	Flex Slider
 -----------------------------------------------------------------*/
@@ -30,11 +29,6 @@
 .fslider.h-100 .slide {
 	height: 100% !important;
 }
-
-.slide-video {
-	background-color: white;
-}
-
 
 .flex-container a:active,
 .flexslider a:active,
@@ -92,6 +86,7 @@ html[xmlns] .slider-wrap {
 .no-js .slider-wrap > .slide:first-child {display: block;}
 
 .flex-viewport {
+	background-color: white;
 	min-height: 200px !important;
 	max-height: 100vh;
 	-webkit-transition: all 1s ease;
@@ -99,6 +94,46 @@ html[xmlns] .slider-wrap {
 	transition: all 1s ease;
 }
 
+/* Spinner
+-----------------------------------------------------------------*/
+
+.slide {
+	background-color: white;
+	position: relative;
+	img, video {
+		z-index: 1;
+		position: absolute;
+	}
+}
+.slider-spinner {
+	position: absolute;
+	z-index: 0;
+	top: 40%;
+    left: 50%;
+}
+@keyframes spinner {
+	0% {
+		transform: translate3d(-50%, -50%, 0) rotate(0deg);
+	}
+	100% {
+		transform: translate3d(-50%, -50%, 0) rotate(360deg);
+	}
+}
+.slider-spinner::before {
+	animation: 1.5s linear infinite spinner;
+	animation-play-state: inherit;
+	border: solid 5px #cfd0d1;
+	border-bottom-color: #1c87c9;
+	border-radius: 50%;
+	content: "";
+	height: 100px;
+	width: 100px;
+	position: absolute;
+	top: 10%;
+	left: 10%;
+	transform: translate3d(-50%, -50%, 0);
+	will-change: transform;
+}
 
 /* Flex Slider - Navigation
 -----------------------------------------------------------------*/
