code highlight on project + links color

--- a/assets/sass/project.scss
+++ b/assets/sass/project.scss
@@ -10,6 +10,7 @@
 @import './public/portfolio';
 @import './public/animations'; // optimized l
 @import './public/elements/sliders/owl-carousel'; // optimized s (created)
+@import './public/content';
 
 // 'comments' section
 @import './public/elements/comments'; // optimized (created)
