--- a/assets/sass/public/_content.scss
+++ b/assets/sass/public/_content.scss
@@ -1,3 +1,5 @@
+@import '~highlight.js/scss/agate.scss';
+
 /* ----------------------------------------------------------------
 	Content
 -----------------------------------------------------------------*/
