--- a/assets/sass/public/_header.scss
+++ b/assets/sass/public/_header.scss
@@ -57,7 +57,7 @@
 				z-index: 299;
 			}
 		}
-		+ .include-header {
+		+ #wrapper .include-header {
 			margin-top: -$header-height - 2px;
 			display: inline-block;
 			vertical-align: bottom;
